2003-08-01  Marco Gerards  <metgerards@student.han.nl>

	* opts-std-startup.c: Include <string.h>.
	(OPT_VISUAL_BELL): New macro.
	(OPT_AUDIBLE_BELL): Likewise.
	(_cons_visual_bell): New variable.
	(_cons_audible_bell): Likewise.
	(startup_options): Added options "--visual-bell" and
	"--audible-bell" ...
	(parse_startup_opt): ...and parse those new options here.
	* priv.h (bell_type_t): New enumeration.
	(_cons_visual_bell): New external variable.
	(_cons_audible_bell): Likewise.
	* file-changed.c (cons_S_file_changed): Use the right bell.

2002-10-04  Marcus Brinkmann  <marcus@gnu.org>

	* vcons-open.c (cons_vcons_open): Add casts to silence gcc
	warning.

2002-09-22  Marcus Brinkmann  <marcus@gnu.org>

	* vcons-refresh.c (cons_vcons_refresh): Take VCONS->scrolling into
	account.

2002-09-17  Marcus Brinkmann  <marcus@gnu.org>

	* opts-std-startup.c (OPT_NO_JUMP_DOWN_ON_INPUT): New macro.
	(OPT_NO_JUMP_DOWN_ON_OUTPUT): Likewise.
	(_cons_jump_down_on_input): Default to 1.
	(startup_options): Add new options --no-jump-down-on-input and
	--no-jump-down-on-output.
	(parse_startup_opt): Handle these new options.

2002-09-16  Marcus Brinkmann  <marcus@gnu.org>

	* cons.h: Add prototype for cons_vcons_clear.
	* file-changed.c (cons_S_file_changed): Prepare all areas we write
	to with cons_vcons_clear (unless we use cons_vcons_scroll
	already).
	* vcons-refresh.c (cons_vcons_refresh): Likewise.
	* vcons-scrollback.c (_cons_vcons_scrollback): Likewise.

	* opts-std-startup.c (parse_startup_opt): Use argp_error instead
	argp_usage for error.  Replace case for ARGP_KEY_END with case for
	ARGP_KEY_NO_ARGS.

2002-09-14  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile (SRCS): Add vcons-input.c.
	* vcons-input.c: New file.

	* vcons-scrollback.c (_cons_vcons_scrollback): New function.
	(cons_vcons_scrollback): Reimplement in terms of
	_cons_vcons_scrollback.
	* cons.h (cons_scroll_t): New type.
	(cons_vcons_scrollback): Update prototype.
